# finance_accounting_prototype

./: .gitignore  CLAUDE.md  GAP_ANALYSIS.md  MODULE_AUDIT_TRACKER.md  Makefile  TEST_COMMANDS.md  TEST_COVERAGE_GAP_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  docker-compose.yml  log_viewer_plan.md  plan.md  pyproject.toml
docs/: ARCHITECTURE_MEMO.md  ASSUMPTIONS_LOG.md  CONFIG_AUTHORING_GUIDE.md  COVERAGE_MATRIX.md  COVERAGE_REPORT.md  EXTENSIBILITY.md  FUZZING_SURFACE_AREA.md  GAP_ANALYSIS.md  GAP_ANALYSIS_V2.md  INTEGRATION_EVENT_CATALOG.md  MODULE_CONSOLIDATION_PATTERNS.md  MODULE_DEVELOPMENT_GUIDE.md  RBAC_DESIGN.md  SINDRI_INTEGRATION_ANALYSIS.md  TESTING_STRATEGY.md  TEST_COMMANDS.md  TEST_OVERLAP_AND_VALUE.md  TRACE.md  WIRING_COMPLETION_PLAN.md  WORKFLOW_DIRECTIVE.md
finance_batch/: __init__.py  orchestrator.py
finance_batch/domain/: __init__.py  schedule.py  types.py
finance_batch/models/: __init__.py  batch.py
finance_batch/services/: __init__.py  executor.py  scheduler.py
finance_batch/tasks/: __init__.py  ap_tasks.py  ar_tasks.py  assets_tasks.py  base.py  cash_tasks.py  credit_loss_tasks.py  gl_tasks.py  payroll_tasks.py
finance_config/: README.md  __init__.py  assembler.py  bridges.py  compiler.py  guard_ast.py  integrity.py  lifecycle.py  loader.py  schema.py  validator.py
finance_engines/: README.md  __init__.py  aging.py  allocation.py  allocation_cascade.py  approval.py  billing.py  contracts.py  expense_compliance.py  ice.py  invokers.py  matching.py  rate_compliance.py  subledger.py  tax.py  timesheet_compliance.py  tracer.py  variance.py
finance_engines/correction/: __init__.py  unwind.py
finance_engines/reconciliation/: __init__.py  bank_checker.py  bank_recon_types.py  checker.py  domain.py  lifecycle_types.py
finance_engines/valuation/: __init__.py  cost_lot.py
finance_ingestion/: README.md  __init__.py
finance_ingestion/adapters/: __init__.py  base.py  csv_adapter.py  json_adapter.py  xlsx_adapter.py
finance_ingestion/domain/: __init__.py  types.py  validators.py
finance_ingestion/mapping/: __init__.py  engine.py  test_harness.py
finance_ingestion/models/: __init__.py  staging.py
finance_ingestion/promoters/: __init__.py  account.py  ap.py  ar.py  base.py  inventory.py  journal.py  party.py
finance_ingestion/services/: __init__.py  import_service.py  promotion_service.py
finance_kernel/: README.md  __init__.py  exceptions.py  execution_plan.md  invariants.py  logging_config.py  plan_events.md
finance_kernel/db/: README.md  __init__.py  base.py  engine.py  immutability.py  triggers.py  types.py
finance_kernel/domain/: README.md  __init__.py  accounting_intent.py  accounting_policy.py  approval.py  bookkeeper.py  clock.py  control.py  currency.py  dtos.py  economic_link.py  engine_types.py  event_validator.py  ledger_registry.py  meaning_builder.py  policy_authority.py  policy_bridge.py  policy_compiler.py  policy_selector.py  policy_source.py  reference_snapshot.py  strategy.py  strategy_registry.py  subledger_control.py  validation.py  valuation.py  values.py  workflow.py
finance_kernel/models/: __init__.py  account.py  approval.py  audit_event.py  contract.py  cost_lot.py  dimensions.py  economic_event.py  economic_link.py  event.py  exchange_rate.py  fiscal_period.py  interpretation_outcome.py  journal.py  party.py  subledger.py
finance_kernel/posting_rules/: __init__.py  base.py  registry.py
finance_kernel/selectors/: __init__.py  base.py  journal_selector.py  ledger_selector.py  subledger_selector.py  trace_selector.py
finance_kernel/services/: README.md  __init__.py  approval_service.py  auditor_service.py  base.py  contract_service.py  engine_dispatcher.py  ingestor_service.py  interpretation_coordinator.py  journal_writer.py  ledger_service.py  link_graph_service.py  (+11 more)
finance_modules/: README.md  __init__.py  _orm_registry.py  _posting_helpers.py
finance_services/: README.md  __init__.py  _close_types.py  _subledger_mapping.py  bank_reconciliation_check_service.py  correction_service.py  engine_dispatcher.py  integration.py  invokers.py  lifecycle_reconciliation_service.py  observability.py  orm.py  pack_policy_source.py  period_close_orchestrator.py  posting_orchestrator.py  rbac_authority.py  reconciliation_service.py  subledger_ap.py  subledger_ar.py  subledger_bank.py  subledger_contract.py  subledger_inventory.py  subledger_period_service.py  subledger_posting.py  subledger_service.py  valuation_service.py  workflow_executor.py
logs/: README.md
plans/: APPROVAL_ENGINE_PLAN.md  CURRENT_PLAN.md  ERP_INGESTION_PLAN.md  GUARD_WIRING_PLAN.md  MODULE_ORM_PERSISTENCE_PLAN.md  QBO_LOADER_PLAN.md  trace_bundle_implementation.md
scripts/: README.md  approve_config.py  balance_sheet_from_qbo_journal.py  compare_balance_sheet_line_by_line.py  compare_bs_to_qbo.py  count_loc.py  demo_engines.py  demo_reports.py  demo_trace.py  diagnose_journal_count.py  find_missing_journal_rows.py  generate_config_fragments.py  generate_ironflow_config.py  generate_tier_configs.py  import_bootstrap.py  interactive.py  map_coa.py  pg_check_connections.py  pg_kill_connections.py  recommend_coa.py  reset_db_ironflow.py  run_import.py  run_ironflow_full_import.py  run_ironflow_import.py  run_mutation_audit.py  run_qbo_convert.py  seed_data.py  trace.py  trace_render.py  view_journal.py  view_reports.py
tests/: README.md  __init__.py  conftest.py  test_logging.py
upload/: .gitkeep
(+608 files in other folders)
