[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-kernel"
version = "0.1.0"
description = "Phase 1 Finance Kernel - Event-sourced accounting system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Finance Kernel Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "openpyxl>=3.1.0",  # XLSX journal/list import
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_kernel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
timeout = 300
markers = [
    "unit: Unit tests for primitives",
    "posting: Posting invariant tests",
    "concurrency: Concurrency tests",
    "replay: Replay and determinism tests",
    "audit: Audit trail tests",
    "postgres: Tests requiring PostgreSQL (true concurrency)",
    "slow_locks: Tests that wait for database locks (may hang if orphaned connections exist)",
    "benchmark: Performance benchmark tests (run separately via tests/benchmarks/)",
    "unit: Pure logic; no DB/config/persistence required",
    "service: Service layer; may mock DB/config; reality detector does not enforce boundaries",
    "system: Full pipeline; reality detector requires real DB + config load + persistence write",
    "adversarial: Adversarial test; may use system or service tier",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes (report only -- never auto-fix F401/F811)
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
# SAFETY: Never auto-fix import removal rules. This codebase uses
# re-exports extensively (in __init__.py, engines, and module facades).
# Removing "unused" imports silently breaks downstream consumers.
unfixable = ["F401", "F811"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Re-exports in __init__.py are intentional
"tests/**" = ["F841"]        # Unused variables common in test assertions

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
